<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ratismal</groupId>
    <artifactId>DriveBackupV2</artifactId>
    <version>1.3.7</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <github.global.oauth>${GITHUB_OAUTH_TOKEN}</github.global.oauth>
        <project.http.version>1.19.0</project.http.version>
        <project.oauth.version>1.19.0</project.oauth.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.3</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.apis</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okhttp3</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>okio</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>kotlin</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.json</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>commons-net</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.hierynomus</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>mysql-connector-java</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.kyori</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.fasterxml</pattern>
                            <shadedPattern>ratismal.drivebackup.DriveBackup.lib</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <message>Maven artifacts for the DriveBackupV2 API</message>  <!-- git commit message -->
                    <noJekyll>true</noJekyll>                                     <!-- disable webpage processing -->
                    <merge>true</merge>
                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
                    <branch>refs/heads/mvn-repo</branch>                          <!-- remote branch name -->
                    <includes><include>**/*</include></includes>
                    <repositoryName>DriveBackupV2</repositoryName>                <!-- github repo name -->
                    <repositoryOwner>MaxMaeder</repositoryOwner>                  <!-- github username  -->
                    <oauth2Token>${github.global.oauth}</oauth2Token>
                </configuration>
                <executions>
                    <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
                    <execution>
                        <goals>
                        <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
		<repository>
  			<id>CodeMC</id>
  			<url>https://repo.codemc.org/repository/maven-public</url>
		</repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.9-R0.1-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-drive</artifactId>
            <version>v2-rev200-1.21.0</version>
        </dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>1.7</version>
			<scope>compile</scope>
		</dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.3</version>
        </dependency>
        <dependency>
            <groupId>com.hierynomus</groupId>
            <artifactId>sshj</artifactId>
            <version>0.29.0</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.16</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.0.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
</project>
